lesson2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filelist
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: filelist
  template:
    metadata:
      labels:
        app: filelist
    spec:
      containers:
        - name: filelist
          image: docker.io/sviridoves/filelist:v1.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /list
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /list
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
